2005-05-20  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (add_new_maps): Little cleanup. Removed unneeded
	MemmapsInfo type.
	
	* configure.in: Post release version bump.

2005-05-18  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.11.2.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_kill_dialog): Fixed strangely
	formulated messages.
	Patch by Benjamin LeMasurier <uidzer0@uidzer0.org>.
	Closes #163395.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: ProcConfig::update_inteval is now unsigned.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c:
	* src/callbacks.h:
	* src/interface.c: (create_proc_view):
	* src/procman.h:
	* src/proctable.c: (search_equal_func), (proctable_new),
	(proctable_update_all), (make_loadavg_string):
	* src/proctable.h: Removed the search box in favor of the tree's
	builtin search.
	
	Added system load averages on the process tab. 

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/smooth_refresh.h: Fixed G_GNUC_INTERNAL usage.

2005-05-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h:
	* src/proctable.c: (get_process_user), (update_info_mutable_cols),
	(insert_info_to_tree), (update_info), (get_info):
	Added ProcInfo::uid.
	Update ProcInfo::user whenever ProcInfo::uid changes. If ProcInfo::uid
	doesn't match with any system username, displays direclty ProcInfo::uid.
	
	* src/proctable.c:(get_info): Used glibtop_get_proc_argv() instead of
	glibtop_get_proc_args().

2005-05-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/proctable.c: (insert_info_to_tree): Fixed a leak.

2005-05-11  Benoît Dejean  <TazForEver@dlfp.org>

	* src/openfiles.c: (update_openfiles_dialog): Fixed a leak.
	
	* src/prettytable.c: (pretty_table_free): Don't forget to free all
	hashtables.

	* src/procman.c: (procman_free_data): Actually free the prettytable.
	
	* src/proctable.c: (get_process_name), (get_info): Fixed process name.